# urfu_newt_detection

./: pyproject.toml
alt_tritons/latest_model/: predict_belly_v4.py  train_belly_fine_tune_v4.py  train_belly_v4_clean.py
alt_tritons/scripts/: vgg_to_masks_auto.py
newt_body_detection_test/: predict_unet.py  train_unet.py
